# sysadmin-backup

./: .cproject  .gitignore  .project  CMakeLists.txt  README.rst
.bzr/branch/: last-revision
.bzr/checkout/: dirstate
Debug/: sysadmin-backup
Debug/src/: subdir.mk  sysadmin-backup.d
Release/: makefile  objects.mk
Release/src/: backupapp.d  subdir.mk
Release/src/gklib4/: subdir.mk
etc/: eupolis-external.conf  eupolis-internal-1.conf  eupolis-internal-2.conf  ideart-drobos.conf  ideart-www.conf  sample.conf  test.conf
gklib4/: .cproject  .project  application.cpp  application.h  dev.rst  output.cpp  output.h  parameterrecord.h
gklib4/.bzr/branch/: last-revision
gklib4/.bzr/checkout/: dirstate
gklib4/Debug/: output.d  subdir.mk
gklib4/Release/: application.d  makefile  subdir.mk
src/: backupapp.cpp  backupapp.h  sysadmin-backup.cpp
